# respi

./: .gitignore  CMakeLists.txt  CMakeLists.txt.in  README.md  arm-none-eabi-gcc.cmake  makefile  respi Debug.launch  setup.sh  teleplot_layout_2023-1-11_11-9.json
.github/workflows/: cmake.yml
Application/: CMakeLists.txt
Application/src/: breath_machine.cpp  commands.cpp  measurements.cpp  print_output.cpp  threads.cpp
Arch/: CMakeLists.txt
Arch/inc/: DataAccessor.hpp  Fibre.hpp
Arch/src/: DataAccessor.cpp
app/: CMakeLists.txt
app/inc/: breath_machine.hpp  print_output.hpp  trigger.hpp
app/src/: blink_led.cpp  breath_machine.cpp  commands.cpp  measurements.cpp  print_output.cpp  targets.cpp  test_machine.cpp  threads.cpp  trigger.cpp
board/: CMakeLists.txt
board/st/: CMakeLists.txt
board/st/stm32f302r8_nucleo/: CMakeLists.txt  STM32F302R8TX_FLASH.ld
board/st/stm32f302r8_nucleo/Inc/: main.h  stm32f3xx_hal_conf.h
board/st/stm32f302r8_nucleo/Src/: main.c  stm32f3xx_hal_msp.c  stm32f3xx_it.c
hal/: CMakeLists.txt
hal/src/: I2CI.cpp
infra/: CMakeLists.txt
infra/inc/: Commands.hpp  DataAccessor.hpp  Fibre.hpp  Threads.hpp
infra/src/: Commands.cpp  DataAccessor.cpp  Fibre.cpp  Threads.cpp
infra/unit/: Commands_t.cpp
python/: serial_respi.py  test.py
stm32/: CMakeLists.txt  STM32F302R8TX_FLASH.ld  Sandbox Debug.cfg  Sandbox Debug.launch  Sandbox.ioc
stm32/Core/Inc/: crc.hpp  main.h  stm32f3xx_it.h
stm32/Core/Src/: main.c  stm32f3xx_hal_msp.c  stm32f3xx_it.c
stm32/Drivers/STM32F3xx_HAL_Driver/: CMakeLists.txt
